# swagger_server/controllers/dispatch_controller.py
@@ -100,6 +100,46 @@ class DispatchView(MethodView):
         """
         return 'do some magic!'
     
+    def get_dispatch(self):  # noqa: E501
+        """Obtiene todos los despachos
+
+        Devuelve todos los despachos de la base # noqa: E501
+
+        :param external_transaction_id: 
+        :type external_transaction_id: str
+        :param channel: 
+        :type channel: str
+
+        :rtype: GenericResponse
+        """
+        internal_process = (None, None)
+        function_name = "get_dispatch"
+        response = {}
+        status_code = 500
+        try:
+            if connexion.request.headers:
+                start_time = default_timer()
+                internal_transaction_id = str(generate_internal_transaction_id())
+                external_transaction_id = request.headers.get('externalTransactionId')
+                internal_process = (internal_transaction_id, external_transaction_id)
+                response["internal_transaction_id"] = internal_transaction_id
+                response["external_transaction_id"] = external_transaction_id
+                message = f"start request: {function_name}, channel: {request.headers.get('channel')}"
+                logger.info(message, internal=internal_transaction_id, external=external_transaction_id)
+                headers = {k.lower(): v for k, v in request.headers.items()}
+                results = self.dispatch_use_case.get_all_dispatch(headers, request.args, internal_transaction_id, external_transaction_id)
+                response["error_code"] = 0
+                response["message"] = "Despachos obtenidos correctamente"
+                response["data"] = results
+                end_time = default_timer()
+                logger.info(f"Fin de la transacción, procesada en : {end_time - start_time} milisegundos",
+                            internal=internal_transaction_id, external=external_transaction_id)
+                status_code = 200
+        except Exception as ex:
+            response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
+            
+        return response, status_code
+    
     def get_dispatch_products(self):  # noqa: E501
         """Obtiene todos los productos de despacho
 
