# swagger_server/swagger/swagger.yaml
@@ -175,6 +175,77 @@ paths:
                 $ref: "#/components/schemas/ResponseError"
       x-openapi-router-controller: swagger_server.controllers.dispatch_controller.DispatchView
   /dispatch:
+    get:
+      tags:
+      - Dispatch
+      summary: Obtiene todos los despachos
+      description: Devuelve todos los despachos de la base
+      operationId: get_dispatch
+      parameters:
+      - name: user
+        in: header
+        required: false
+        schema:
+          type: string
+          example: "dmales"
+      - name: start_date
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
+          example: "2025-01-21T00:00:00"
+      - name: end_date
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
+          example: "2025-01-22T00:00:00"
+      - name: externalTransactionId
+        in: header
+        required: true
+        schema:
+          type: string
+          example: "fcea920f7412b5da7be0cf42b8c93759"
+      - name: channel
+        in: header
+        required: true
+        schema:
+          type: string
+          example: "ZENTINEL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.dispatch_controller.DispatchView
     put:
       tags:
       - Dispatch
